--- a/doc/main.tex
+++ b/doc/main.tex
@@ -5,6 +5,7 @@
 \usepackage{geometry}
 \usepackage{booktabs}
 \usepackage{graphicx}
+\usepackage{tikz}
 \usepackage{caption}
 \usepackage{subcaption}
 % \geometry{margin=1in}
@@ -19,6 +20,12 @@
     citecolor={blue!50!black},
     urlcolor={blue!80!black},
 }
+
+\colorlet{myred}{red!20}
+\colorlet{myblue}{blue!20}
+\colorlet{mypurple}{purple!40}
+\colorlet{myorange}{orange!20}
+\colorlet{myteal}{teal!35}
 
 \newtheoremstyle{exerciseStyle}
 { } % Space above
