--- a/mandatory_1/exercises.tex
+++ b/mandatory_1/exercises.tex
@@ -1,5 +1,7 @@
 \begin{exercise}{4.6}
-
+    Consider the eigenvalues of the operators, $L_1$, $L_2$, and $L_3$, where $L_1 u = u_x$, $L_2 u = -\alpha u_{xx}$, $\alpha = 1.0 e^{-5}$, and $L_3 = L_1 + L_2$, with homogeneous Dirichlet conditions.
+    For which of the operators are the eigenvalues positive and real?
+    Repeat the exercise with $L_1 = x u_x$.
 \end{exercise}
 
 \begin{solution}{4.6}
