--- a/doc/main.tex
+++ b/doc/main.tex
@@ -75,10 +75,12 @@
     The code for everything, as well as this document, can be found at my GitHub repository: \url{https://github.com/augustfe/MEK4250}.
 \end{abstract}
 
-\include{1_glimpse/exercises.tex}
+\include{1_glimpse/exercises}
 
-\include{2_sobolev/exercises.tex}
+\include{2_sobolev/exercises}
 
-\include{3_elliptic/exercises.tex}
+\include{3_elliptic/exercises}
+
+\include{4_conv_diff/exercises}
 
 \end{document}
