--- a/mandatory_1/main.tex
+++ b/mandatory_1/main.tex
@@ -14,6 +14,7 @@
 \usepackage{enumitem}
 
 \usepackage{hyperref}
+\usepackage[capitalise]{cleveref}
 \usepackage{xcolor}
 \hypersetup{ % this is just my personal choice, feel free to change things
     colorlinks,
@@ -80,8 +81,11 @@
     \end{solutionTemp}
 }
 
+\numberwithin{equation}{solutionTemp}
+
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}%
+\newcommand*\diff{\mathop{}\!\mathrm{d}}
 
 \title{
     MEK4250\\
