--- a/doc/main.tex
+++ b/doc/main.tex
@@ -106,8 +106,10 @@
 
 \include{2_sobolev/exercises}
 
-\include{3_elliptic/exercises}
+\include{3_common_elements/exercises}
 
-\include{4_conv_diff/exercises}
+\include{4_elliptic/exercises}
+
+\include{5_conv_diff/exercises}
 
 \end{document}
