--- a/mandatory_1/eigenvalues.tex
+++ b/mandatory_1/eigenvalues.tex
@@ -36,16 +36,16 @@
     \end{equation*}
 
     This is implemented in \texttt{eigs.py}, resulting in the eigenvalues shown in \cref{fig:eigenvalues}.
-    Atleast according to my implementation, the only operator with positive real eigenvalues is $L_2$.
+    As we see, adding the diffusion term to the first operator results in $L_3$ having eigenvalues with positive real parts.
 
     \begin{figure}[ht]
         \centering
         \includegraphics[width=0.8\textwidth]{eigs.pdf}
-        \caption{Eigenvalues for the operators $L_1$, $L_2$, and $L_3$ with homogeneous Dirichlet conditions.\label{fig:eigenvalues}}
+        \caption{Eigenvalues for the operators $L_1$, $L_2$, and $L_3$ with homogeneous Dirichlet conditions. Computed with $N = 500$ first-order Lagrange elements.\label{fig:eigenvalues}}
     \end{figure}
 \end{solution}
 
-\begin{exercise}{6.1}
+\begin{exercise}{6.1}\label{ex:6.1}
     Show that the conditions in \cref{eq:6.15,eq:6.16,eq:6.17} are satisfied for $V_h = H^1_0$ and $Q_h = L^2$.
 \end{exercise}
 
@@ -143,3 +143,50 @@
 
     We have thus shown that the conditions in \cref{eq:6.15,eq:6.16,eq:6.17} are satisfied for $V_h = H^1_0$ and $Q_h = L^2$.
 \end{solution}
+
+\begin{exercise}{6.2}
+    Show that the conditions in \cref{eq:6.15,eq:6.16,eq:6.17} are satisfied for Taylor--Hood and Mini discretizations. % chktex 8
+    (Note that Crouzeix--Raviart is non-conforming so it is more difficult to prove these conditions for this case.) % chktex 8
+\end{exercise}
+
+\begin{solution}{6.2}
+    The Taylor--Hood elements are defined by the basis functions % chktex 8
+    \begin{equation}
+        \begin{split}
+            u &: N_i = a_i + b_i x + c_i y + d_i x y + e_i x^2 + f_i y^2, \\
+            p &: L_i = k_i + l_i x + m_i y,
+        \end{split}
+    \end{equation}
+    under the condition that $N_i$ is continuous across element boundaries.
+    As such, we have that $u_h \in V_h \subset H^1_0$ and $p_h \in Q_h \subset L^2$ for the Taylor--Hood elements. % chktex 8
+    They therefore satisfy the conditions in \cref{eq:6.15,eq:6.16,eq:6.17}, as shown in \cref{ex:6.1}.
+
+    The Mini elements are, as far as I understand, defined by the basis functions
+    \begin{equation}
+        \begin{split}
+            u &: N_i = a_i + b_i x + c_i y + d_i xy(1 - x - y), \\
+            p &: L_i = k_i + l_i x + m_i y,
+        \end{split}
+    \end{equation}
+    and we now need to show that $u_h \in V_h \subset H^1_0$.
+    With a slight abuse of notation, we have
+    \begin{align*}
+        \nabla \cdot N_i &=
+        \nabla \cdot (a_i + b_i x + c_i y + d_i xy - d_i x^2 y - d_i x y^2) \\
+        &= b_i + c_i - d_i x^2 - 4d_i xy - d_i y^2 \\
+        &= b_i + c_i - d_i (x^2 + 4xy + y^2).
+    \end{align*}
+    Presumably, we have that $V_h \subset H^1_0$, however I don't understand Fortin's trick.
+\end{solution}
+
+\begin{exercise}{6.6}
+    In the previous problem the solution was a second order polynomial in the velocity and first order in the pressure.
+    We may therefore obtain the exact solution and it is therefore difficult to check order of convergence for higher order methods with this solution.
+    In this exercise you should therefore implement the problem
+    \begin{align*}
+        u &= (\sin(\pi y), \cos(\pi x)),
+        & p &= \sin(2 \pi x),
+        & f &= -\Delta u - \nabla p.
+    \end{align*}
+    Test whether the approximation is of the expected order for $P_4$--$P_3$, $P_4$--$P_2$, $P_3$--$P_2$, and $P_3$--$P_1$.
+\end{exercise}
